kube-cfg/authorization-app.yaml
#Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: authorization
  name: authorization
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authorization
  template:
    metadata:
      labels:
        app: authorization
        visualize: "true"
    spec:
      containers:
      - name: authorization
        image: vanopremudriy/authorization:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "200Mi"
      dnsPolicy: ClusterFirst
      restartPolicy: Always

---
#Service
apiVersion: v1
kind: Service
metadata:
  labels:
    visualize: "true"
  name: authorization
spec:
  selector:
    app: authorization
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  type: NodePort
