kube-cfg/graylog.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /var/lib/mongo/data
              name: mongodb
      volumes:
        - name: mongodb
          persistentVolumeClaim:
            claimName: mongo-pv-claim

---
apiVersion: v1
kind: Service
metadata:
  labels:
    visualize: "true"
  name: mongo
spec:
  selector:
    app: mongo
  ports:
  - name: http
    protocol: TCP
    port: 27017
    targetPort: 27017
  type: NodePort

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
spec:
  serviceName: elasticsearch
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch-oss:7.2.0
        imagePullPolicy: "IfNotPresent"
        resources:
            limits:
              cpu: 1000m
            requests:
              cpu: 100m
        ports:
        - containerPort: 9200
          name: rest
          protocol: TCP
        - containerPort: 9300
          name: inter-node
          protocol: TCP
