kube-cfg/kafka.yaml
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka1
  labels:
    app: kafka1
spec:
  serviceName: kafka1
  replicas: 1
  selector:
    matchLabels:
      app: kafka1
  template:
    metadata:
      labels:
        app: kafka1
    spec:
      containers:
        - name: kafka1
          image: wurstmeister/kafka:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9092 
---

apiVersion: v1
kind: Service
metadata:
  name: kafka1
  labels:
    app: kafka1
spec:
  clusterIP: None
  ports:
    - name: '9092'
      port: 9092
      protocol: TCP
      targetPort: 9092
  selector:
    app: kafka1

---
apiVersion: v1
kind: Service
metadata:
  name: zoo1
  labels:
    app: zoo1
spec:
  ports:
  - name: client
    port: 2181
    protocol: TCP
  - name: follower
    port: 2888
    protocol: TCP
  - name: leader
    port: 3888
    protocol: TCP
  selector:
    app: zoo1

---
apiVersion: v1
kind: Service
metadata:
  name: zoo2
  labels:
    app: zoo2
spec:
  ports:
  - name: client
    port: 2181
    protocol: TCP
  - name: follower
    port: 2888
    protocol: TCP
  - name: leader
    port: 3888
    protocol: TCP
  selector:
    app: zoo2
