kube-cfg/kraken.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: krakend
spec:
  selector:
    matchLabels:
      app: krakend
  replicas: 1
  template:
    metadata:
      labels:
        app: krakend
    spec:
      containers:
      - name: krakend
        image: vanopremudriy/kraken:latest
        ports:
        - containerPort: 8083
        imagePullPolicy: Never
        command: [ "/usr/bin/krakend" ]
        args: [ "run", "-d", "-c", "/etc/krakend/krakend.json"]
        resources:
          limits:
            memory: "50Mi"

---

apiVersion: v1
kind: Service
metadata:
  name: krakend
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8083
    targetPort: 8083
    protocol: TCP
  selector:
    app: krakend
