kube-cfg/postgres.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: postgres:10.4
          args: ["-c", "max_connections=100"]
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
          resources:
            limits:
              memory: "100Mi"
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pv-claim

---
apiVersion: v1
kind: Service
metadata:
  labels:
    visualize: "true"
  name: db
spec:
  selector:
    app: db
  ports:
  - name: http
    protocol: TCP
    port: 5432
    targetPort: 5432
  type: NodePort
