kube-cfg/redis.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:latest
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 6379
          volumeMounts:
            - mountPath: /var/lib/redis/data
              name: redisdb
      volumes:
        - name: redisdb
          persistentVolumeClaim:
            claimName: redis-pv-claim

---
apiVersion: v1
kind: Service
metadata:
  labels:
    visualize: "true"
  name: redis
spec:
  selector:
    app: redis
  ports:
  - name: http
    protocol: TCP
    port: 6379
    targetPort: 6379
  type: NodePort
